// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddGroupsForm render should render self, children with base props 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="add_contact_groups"
  title="Add to Group"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Add the contact to a group",
        "form": [Function],
        "name": "Add to Group",
        "type": "add_contact_groups",
      }
    }
    onChange={[MockFunction]}
  />
  <p
    data-spec="label"
  >
    <Trans
      i18nKey="forms.add_groups_summary"
    >
      Select the groups to add the contact to.
    </Trans>
  </p>
  <AssetSelector
    createAssetFromInput={[Function]}
    createPrefix="Create Group: "
    entry={
      Object {
        "value": Array [
          Object {
            "name": "Customers",
            "uuid": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
          },
          Object {
            "name": "Unsatisfied Customers",
            "uuid": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
          },
          Object {
            "name": "Early Adopters",
            "uuid": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
          },
          Object {
            "name": "Testers",
            "uuid": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
          },
          Object {
            "name": "Subscribers",
            "uuid": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
          },
          Object {
            "name": "Champions",
            "uuid": "e0cccbcf-49be-4eef-88a7-ce2150a6d902",
          },
        ],
      }
    }
    expressions={true}
    multi={true}
    name="Groups"
    noOptionsMessage="Enter a name to create a new group"
    onAssetCreated={[Function]}
    onChange={[Function]}
    placeholder="Select Groups"
    searchable={true}
    shouldExclude={[Function]}
  />
</Dialog>
`;

exports[`AddGroupsForm updates should allow switching from router: switch from router 1`] = `
Array [
  Object {
    "groups": Array [
      Object {
        "name": "Subscriber",
        "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
      },
    ],
    "type": "add_contact_groups",
    "uuid": "763e4844-3e1b-407a-a1b5-5fdfcd308b41",
  },
]
`;

exports[`AddGroupsForm updates should handle updates and save: update 1`] = `
Array [
  Object {
    "groups": Array [
      Object {
        "name": "Subscriber",
        "uuid": "68223118-109f-442a-aed3-7bb3e1eab687",
      },
    ],
    "type": "add_contact_groups",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
